--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
 	"description": "What am I about?",
 	"main": "server.js",
 	"scripts": {
-		"start": "node server.js"
+		"start": "node server.js",
+		"test": "node tester.js",
+		"dev": "nodemon server.js"
 	},
 	"dependencies": {
 		"express": "^4.14.0",
@@ -29,5 +31,8 @@
 		"hyperdev",
 		"express"
 	],
-	"license": "MIT"
+	"license": "MIT",
+	"devDependencies": {
+		"dotenv": "^6.0.0"
+	}
 }
